--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Grayscale
-email: your-email@domain.com
+title: Hassan Iskaf
+email: hiskaf1@gmail.com
 url: https://example.github.io
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
@@ -10,21 +10,16 @@ color:
   links: '#219ab3'
 
 # Footer settings
-footer: Your Website
+footer: Hassan Iskaf
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: https://twitter.com/SBootstrap
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: https://twitter.com/HassanIskaf
   - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
-
+    url: https://github.com/hassanisk
+  - title: linkedin
+    url: https://www.linkedin.com/in/hassan-iskaf/
 # Build settings
 markdown: kramdown
 permalink: pretty
