--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Hassan Iskaf
 email: Hiskaf1@gmail.com
 url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "H"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
