--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title: Hassan Iskaf
 email: Hiskaf1@gmail.com
 url: https://example.github.io
-description: "H"
+slogan: "with every click, I develop"
+description: "A creative web developer working with Javascript, Ruby on Rails, Angularjs and more.."
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
