--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Hassan Iskaf
 email: Hiskaf1@gmail.com
 url: https://example.github.io
 slogan: "'with every click, I develop'"
-description: "A creative web developer working with JavaScript, Ruby on Rails, AngularJS and more.."
+description: "Welcome to Hassan Iskaf portfolio. A creative web developer working with JavaScript, Ruby on Rails, AngularJS and more.."
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
